Bug: Unusable actions be red when actionsPanel changes in same event
Bug: Stats panel shows no denom after healing from event
Balance: Fix the wraith's stats
Bug: Can't reach the ending from left
Bug: Actions don't fade out for all events
Bug: Move rewards panel down lower.
Bug: Weirdo item generation bug from monsters in boss fights
Bug: MP isn't decreaseing from altar event
Bug: isCrit is always set on regen?

Fix: Make it so active skills are greyed out if 4 actives are already selected
Fix: The min/max in bars breaks for 3 digit mins and maxs

TOMORROW'S GOALS
----------------
Feature: branchingPaths event (1st area) - player sees two paths either choice randomly increases or decreases progress)

Feature: KeyItems Panel (should be significantly easier than the other two)
Feature: spinalArch event (greyWastesTombs) - a gigantic archway made of spinals conglomerating
    If player walks through with high int, rewarded with EXP and med quality item
    Else, take damage, or potentially fight spinals
    Also have the option to go around, taking less damage
Feature: strangleHeadsDancing (greyWastesTombs) - A party of strangleHeads just wiggling about, unaware of player's presence
    Can choose to sneak past, potentially fight (dex check)
    Inspect for more information
    Ambush, (str check) can kill them all for a lot of exp, fail and take damage + trap debuff on all partyMembers
Feature: talkingWraith (greyWasteTombs) - A Lesser Wwraith that talks?!
    Requires quests and items to implement
Feature: offerring (greyWastesTombs) event - Find an offerring (always a random candle) at an altar
    Steal with LUK check
    Fail, and have all MP drained


FUTURE
------
Future: Prevent rekindling with no candles to rekindle
Future: Make skill columns require two skill points in the previous column when there's enough skills
Clean Up: Might be stupid how im setting null type items to load stuff in on partyMember




