@@ -328,7 +328,7 @@ AnimatorState:
   m_MirrorParameterActive: 0
   m_CycleOffsetParameterActive: 0
   m_TimeParameterActive: 0
-  m_Motion: {fileID: 7400000, guid: 8497b86bf9c2a47d18e5d65d4b9b38a1, type: 2}
+  m_Motion: {fileID: 7400000, guid: 15998f32215724e46887f30859eeccb3, type: 2}
   m_Tag: 
   m_SpeedParameter: 
   m_MirrorParameter: 
