@@ -160,6 +160,7 @@
 		{ "key": "lostPouch_event", "value": "You see a bag dropped by someone wandering the wastes." },
 		{ "key": "greyMerchant_event", "value": "Looks like you're not the only human walking these roads today.\nSeems to be trader of some sort." },
 		{ "key": "outpostCandle_event", "value": "A lonely outpost is standing in the distance." },
+		{ "key": "forkedRoad_event", "value": "There's a fork in the road." },
 		{ "key": "theGreyWastes_event", "value": "The Grey Wastes were aptly named. Only fools dare travel these lands. Looks like this is the start of the path." },
 		{ "key": "greyWastesPathSplit_event", "value": "The road is divided by mountainous hills. These paths will never cross." },
 		{ "key": "outpostCandleUsed_event", "value": "There's a recently used outpost nearby. Unkindled might be close." },
@@ -203,6 +204,8 @@
 		{ "key": "outpostCandle0_int", "value": "Rest" },
 		{ "key": "outpostCandle1_int", "value": "Revive" },
 		{ "key": "outpostCandle2_int", "value": "Rekindle" },
+		{ "key": "forkedRoad0_int", "value": "Left" },
+		{ "key": "forkedRoad1_int", "value": "Right" },
 		{ "key": "outpostCandleUsed0_int", "value": "Rest" },
 		{ "key": "outpostCandleUsed1_int", "value": "Revive" },
 		{ "key": "outpostCandleUsed2_int", "value": "Rekindle" },
@@ -289,6 +292,14 @@
 		{ "key": "outpostCandleUsed1_1_res", "value": "Who would pass on a free meal?" },
 		{ "key": "outpostCandleUsed2_0_res", "value": "Pray they last longer this time." },
 		{ "key": "outpostCandleUsed2_1_res", "value": "No light and no luck." },
+		{ "key": "forkedRoad0_0_res", "value": "Perhaps this is the right way?" },
+		{ "key": "forkedRoad0_1_res", "value": "Although your memory alludes you, this feels like the wrong way." },
+		{ "key": "forkedRoad0_2_res", "value": "They might be delusional, but your friend remembers this path." },
+		{ "key": "forkedRoad0_3_res", "value": "You might be lost. Well as long as you have the road,\nit shouldn't be too bad." },
+		{ "key": "forkedRoad1_0_res", "value": "You can't quite remember, but this path feels familiar." },
+		{ "key": "forkedRoad1_1_res", "value": "You don't remember going this way. No time for hesitations though." },
+		{ "key": "forkedRoad1_2_res", "value": "This has to be the right path. You're almost sure of it." },
+		{ "key": "forkedRoad1_3_res", "value": "Was this the way you came? Did you even come this way?" },
 		{ "key": "hideFromThePack0_0_res", "value": "You lie quietly against the dirt and pray. After a moment you look back. The pack is walking away." },
 		{ "key": "hideFromThePack0_1_res", "value": "You try to hide but they hear your movements. One runs up and bites." },
 		{ "key": "hideFromThePack1_0_res", "value": "Sometimes you just can't take risks." },
@@ -348,7 +359,7 @@
 		{ "key": "spinalArch0_1_res", "value": "As you walk through, the spinals begin to move faster and faster. Halfway through, they strike the path with lightning." },
 		{ "key": "spinalArch0_2_res", "value": "Your father would go on for hours about what its like travelling underneath the sea. This might be similar." },
 		{ "key": "spinalArch0_3_res", "value": "There's something terribly beautiful about this." },
-		{ "key": "spinalArch1_0_res", "value": "The archway extends for nearly a kilometer. Trudging off the path will take a while." },
+		{ "key": "spinalArch1_0_res", "value": "The archway extends for nearly a kilometer.\nTrudging off the path will take a while." },
 		{ "key": "spinalArch1_1_res", "value": "While this archway is rather short, the bursts of electricity from the spinals cover quite the area." },
 		{ "key": "spinalArch1_2_res", "value": "Many of the spinals watch you as you walk past them. Old folktales claim they long for connection." },
 		{ "key": "spinalArch2_0_res", "value": "Hunters have died for the healing properties the spinal's fluid possesses. You cautiously dip your hands in." },
@@ -461,7 +472,7 @@
 		{ "key": "HC0_use_title", "value": "Eternal Fragrance" },
 		{ "key": "HC0_use_des", "value": "Gain Guard for 4 turns" },
 		{ "key": "RageC0_use_title", "value": "Burning Anger" },
-		{ "key": "RageC0_use_des", "value": "Gain Rage for 3 turns" },
+		{ "key": "RageC0_use_des", "value": "Gain Rage for 5 turns" },
 		{ "key": "MiracleC0_use_title", "value": "Burning Hope" },
 		{ "key": "MiracleC0_use_des", "value": "Gain Miracle for 1 turn" },
 
