@@ -42,9 +42,12 @@ Bug: Move rewards panel down lower.
 Bug: Weirdo item generation bug from monsters in boss fights
 Bug: MP isn't decreaseing from altar event
 Bug: isCrit is always set on regen?
+Fix: Make stasis attack be greener longer
+Bug: Can't place class items in any slots
 
 Fix: Make it so active skills are greyed out if 4 actives are already selected
 Fix: The min/max in bars breaks for 3 digit mins and maxs
+Bug: Ancient altar event is kinda broken
 
 TOMORROW'S GOALS
 ----------------
